# Final-deplyment

./: INSTALLATION_GUIDE.md  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
data/: app_settings.json
database/: __init__.py
